--- a/code/src/index.css
+++ b/code/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(24, 23, 23);
 }
 
 code {
@@ -12,3 +13,70 @@ code {
     monospace;
 }
 
+.Page {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  font-size: 14px;
+  color: white
+}
+
+.Card {
+  position: relative;
+  margin: 20px auto;
+  width: 300px;
+}
+
+.Title {
+  font-weight: 700;
+  font-size: 14px;
+  font-family: Helvetica;
+  margin: 7px 0;
+}
+
+.Title:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.Artist {
+  font-size: 14px;
+  font-family: Helvetica;
+  color:#a0a0a0;
+}
+
+.Artist:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+
+.Symbols {
+  display: flex;
+  justify-content: space-evenly;
+  position: absolute;
+  top: 32%;
+  width: 300px;
+  align-items: center;
+  opacity: 0.0;
+}
+
+.Card:hover {
+  opacity: ;
+}
+
+.Card:hover + .Symbols {
+  opacity: 1;
+
+}
+
+.Like, 
+.More {
+height: 35px;
+width: 35px;
+}
+
+.Play {
+  height: 70px;
+  width: 70px;
+}
